# genesis_seed

./: .gitignore  Makefile  README.md  init  pyproject.toml  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: build.yml  tests.yaml  tests.yml
configurations/IPXE/: 1af41041.ipxe  pcbios.ipxe
configurations/kernel/: kernel.cfg
configurations/python/: Setup
genesis_seed/cmd/: agent.py
genesis_seed/common/: clients.py  constants.py  exceptions.py  http.py  system.py  utils.py
genesis_seed/common/http/: base.py  clients.py
genesis_seed/common/orch/: core.py
genesis_seed/dm/: hw_models.py  models.py
genesis_seed/drivers/: guest.py
genesis_seed/services/: agent.py  base.py  basic.py
genesis_seed/tests/unit/: test_models.py
kernel/: kernel.cfg
python/: Setup
