[metadata]
name = genesis-seed
summary = Genesis Seed OS
description_file =
    README.md
author = Genesis Corporation
author_email = anton.kremenetsky@gmail.com
home_page = https://github.com/infraguys/genesis_seed/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[files]
packages =
    genesis_seed

[entry_points]
console_scripts =
    seed-os-agent = genesis_seed.cmd.agent:main
